# TDdeploy

./: .gitignore  CLAUDE.md  Cargo.toml  dwip.sh  gc.sh  run.sh
coding_tips/: CMakeLists.txt
coding_tips/include/os/: os.h
coding_tips/include/util/: xerror.h  xstr.h  xutil.h
coding_tips/os/: CMakeLists.txt
coding_tips/thread_in_turn/: CMakeLists.txt  Makefile  Makefile.old  a.out  b.out  readme.md  thread_in_turn.c  try_error.c  try_thread  try_thread.c
coding_tips/thread_in_turn/src/: test_pthread.c  thread_in_turn.c
coding_tips/thread_in_turn/test/: learn_def.c
coding_tips/tmp/: a.out  simple.c
coding_tips/tutor/: simple.c
coding_tips/tutor/hello_libuv/: fib_libuv.c  hello_libuv.c
coding_tips/tutor/learn_pest/: Cargo.toml
coding_tips/tutor/learn_pest/src/: main.rs
coding_tips/tutor/learn_ts/: app2.js  app2.ts  run.sh
coding_tips/tutor/lemon/: Makefile  calc  calc.c  calc.h  calc.out  calc.y  lemon  multi_test.txt  run.sh  test_input.txt  test_no_newline.txt  tokenizer.c
coding_tips/tutor/lemon/tmp_old/: calc.y.old  test_calc.c
coding_tips/tutor/libuv-example/: CMakeLists.txt  Cargo.toml  client.c  readme.txt
coding_tips/tutor/libuv-example/src/: main.rs
coding_tips/tutor/test_libcurl/: c_client  curl_client.c  run.sh
coding_tips/tutor/test_libp2p/: Cargo.toml  README.md
coding_tips/tutor/test_libp2p/src/: main.rs
coding_tips/tutor/test_unix_socket/: readme.md
coding_tips/util/src/: xerror.c  xstr.c
config/TDinternal_vscode/: c_cpp_properties.json  compile_commands.json  settings.json
crates/arsenal/: Cargo.toml
crates/arsenal/src/: lib.rs  main.rs
crates/arsenal/src/archive/: archive.rs  mod.rs  parser.rs
crates/arsenal/src/mssql/: mod.rs  query.rs
crates/arsenal/src/plugins/: mod.rs
crates/arsenal/src/serve/: mod.rs  server1.rs  server2.rs
crates/arsenal/src/taoz/: dsv.rs  header.rs  mod.rs
crates/arsenal/src/transform/: mod.rs  mutate.rs  parser.rs  table_options.rs
crates/arsenal/src/utils/: duration.rs  files.rs  mod.rs
crates/arsenal/td_backup_code/: arrow_usage.rs  files.rs
crates/arsenal/tests/: blob_ts5820.rs  kafka2td.rs  sink.rs  test_case.rs  test_kafka.rs
crates/jira_case/: Cargo.toml
crates/jira_case/examples/: consumer2.rs  consumer3.rs  consumer7.rs  consumer9.rs  consumer_json.rs  consumer_json2.rs  kafka_producer_loop.rs  mysql_producer_loop.rs  producer_json.rs  producer_json_loop.rs  pulsar_producer_loop.rs  pulsar_producer_tuya_loop.rs  reader.rs
crates/jira_case/src/: lib.rs  main.rs
crates/jira_case/src/gen_data/: mod.rs
crates/jira_case/src/offen/: kafka.rs  mod.rs  mysql.rs
crates/jira_case/src/taosz/: mod.rs
crates/jira_case/src/td37693/: readme.md
crates/jira_case/src/td38264/: err_insert.txt  mod.rs  readme.md
crates/jira_case/src/ts5820/: kafka.rs  mod.rs  mysql.rs  read_parquet.rs  readme.md  run_cmd.sh  subscribe.rs  td2td-parser.json  tmq.rs
crates/jira_case/src/ts7433/: mod.rs
crates/jira_case/src/ts7443/: mod.rs  readme.md
crates/jira_case/src/ts7446/: readme.md
crates/jira_case/src/ts7448/: batching.rs  consumer.py  consumer.rs  consumer2.rs  consumer3.rs  consumer4.rs  consumer6.rs  consumer8.rs  consumer9.rs  consumer_json.rs  consumer_tuya.rs  consumer_tuya_reader.rs  mod.rs  producer.py  producer.rs  producer3.rs  reader.rs  readme.md  round_trip.rs
crates/jira_case/src/ts7448/auth/: aesecb_decryptor.rs  aesecb_decryptor2.rs  aesecb_decryptor3.rs  aesgcm_decryptor.rs  mod.rs
crates/jira_case/src/ts7448/basic-auth/: .htpasswd  broker.conf
crates/jira_case/tests/: ts5820.rs
crates/test_rust_conn/: Cargo.toml
crates/test_rust_conn/docker/: Dockerfile.dev  build.sh
crates/test_rust_conn/src/: main.rs
data/: err_insert.txt
docker/kafka_kerberos/: README.md  docker-compose.yml  start-kafka-kerberos.sh  stop-kafka-kerberos.sh  test-kafka-kerberos.sh
docker/kafka_kerberos/client/: client-jaas.conf  jaas.conf
docker/kafka_kerberos/kafka/: jaas.conf  kafka-jaas.conf
docker/kafka_kerberos/kerberos/: kadm5.acl  kdc.conf  krb5.conf  setup.sh
docker/kafka_kerberos/zookeeper/: zookeeper-jaas.conf
docs/ai_application/ai_prompt/: ai开发经验.md  license_center.md  others其他需求.md  ralph-loop.md  taosx文档转换.md  漏洞.md
docs/ai_prompt/: 用户权限设计.md
docs/blog/: ai使用思考.md  c内存泄露.md  c的对象释放.md  产品设计.md  心跳机制.md
docs/knowledge/: cmake_usage.md  c技巧.md  jwt机制.md  lemon.md  libp2p使用.md  mssql问题.md  nodejs.md  react范式.md  tensorzero.md  宏.md
docs/knowledge/paper/: MAD.md
docs/knowledge/前端/: vue+ts.md
docs/license_center/: culs-web手动开发.md  启动.md  开发.md
docs/taosx/: influxdb-parser.json  kafka_task.json  kafka_请求.md  mqtt_发送测试数据.md  mysql_blob.json  pulsar-parser.json  test_table_sql.md  常用sql.md  环境安装.md
docs/taosx/influxdb/: 特性.md
docs/taosx/opentsdb/: cmd.md
docs/taosx/测试/: claude_code测试taosx.md  integration测试.md  kafka的gssapi认证.md  万能sql.md  前端测试.md  测试命令.md  测试样例数据.md
docs/taosx/调研/: libuv.md
docs/taosx/需求/: explorer-root权限.md
docs/tools/: docker_qemu.md  windows环境.md  常用命令.md
docs/tsdb/: stream.md  tdengine_编译.md  其他使用.md  文档相关.md
docs/tsdb/CI和测试/: ci相关问题总结.md  e2e 环境.md  跑test_xnode测试用例.md
docs/tsdb/ai_prompt/: drop_xnode_job.md  libuv.md
docs/tsdb/dev/: ts7448.md  xnode.md  授权模块设计.md
docs/tsdb/jira/: ts-7350.md
docs/tsdb/todo/: todo.md
docs/tsdb/代码走读/: ast_nodes.md  mnode.md  monitor.md  sdb流程.md  show语句追踪.md  taosc流程.md  transaction事务.md  ts-7350.md  xnode.md
docs/tsdb/兼容性/: 兼容性.md
docs/tsdb/环境/: github_artifacts下载.md  taosd支持openssl.md  vscode调试配置.md  windows.md  编译.md
docs/tsdb/经验/: mnode里的transaction.md  tsdb开发流程.md  vscode调试工具.md  内存泄露.md  数据库兼容性.md  消息位置排序.md
docs/tsdb/需求/: xnode使用token更新.md  最大长度修改.md  返回自定义错误.md
scripts/: check_status.sh  clean_log.sh  create_task_batch.sh  deploy.sh  deploy_explorer.sh  deploy_taosx.sh  local_deploy_so.sh  start_task.sh  stop_task.sh  taos_restart_all.sh  taos_start_all.sh  taos_stop_all.sh  taosx_deploy.sh
scripts/taosd/: clean.sh  run.sh  stop.sh
ui/: package.json  vite.config.js
ui/src/: App.vue
ui/src/components/: Slot.vue  TestWatch.vue  Todo.vue  zgc.vue
(+11 files in other folders)
