[package]
name = "test_libp2p"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.6", features = ["derive"] }
libp2p = { version = "0.54", features = ["tokio", "noise", "macros", "ping", "tcp", "identify", "yamux", "relay", "quic", "kad", "mdns", "request-response", "cbor", "autonat", "rendezvous"] }
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }

